MsMSQL baglantisi eklendi. #Multi-Node #1

--- a/HangFireDeneme/appsettings.json
+++ b/HangFireDeneme/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HangfireConnection": "server=DESKTOP-R3RQT33\\SQLEXPRESS;database=HangfireDb;User Id=sa;Password=123;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+  } 
 }
